Fix location definer layout issues

--- a/frontend/sass/global.scss
+++ b/frontend/sass/global.scss
@@ -2,10 +2,6 @@
 @use "../third_party/bulma/sass" as bulma;
 @use "../third_party/bulma/sass/utilities/mixins" as bulma_mixins;
 
-.footer {
-    margin-top: 10rem;
-}
-
 // Settings for navbar
 a.is-selected {
     background-color: color.adjust(bulma.$primary, $saturation: -12%);
